--- a/Product/ProductStyle.css
+++ b/Product/ProductStyle.css
@@ -151,8 +151,8 @@ margin-top:67px;
 }
 
 .desc-more>button:hover{
-    background: #ffffff;
-    color: var(--button-color);
+    background: var(--second-color);
+    color: var(var(--bg-color));
     transition: 0.2 all linear;
 }
 
@@ -433,18 +433,18 @@ margin-top:67px;
 
 /* Feedback */
 .feedback{
-    width: 1067px;
+    width: 1100px;
     height: 247px;
     border-radius: 20px;
-    margin-top: 100px;
+    margin: auto;
     background: #AFBF67;
     padding: 20px;
-    align-items: center;
-    align-content: centen;
-    justify-content: center;
+    position: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
-.feedback p{
+.feedback-header {
     color: #FFF;
     text-align: center;
     font-family: 'Inter';
@@ -455,6 +455,7 @@ margin-top:67px;
     align-items: center;
     justify-content: center;
     display: flex;
+    margin-top: 30px;
 }
 
 .form{
@@ -485,16 +486,25 @@ margin-top:67px;
     border: none;
 }
 
-.input-feedback [type='submit']{
+.input-feedback [type=submit]{
     margin-left: 5px;
     border-radius: 10px;
     width: 93px;
     height: 33px;
+    font-size: 16px;
     flex-shrink: 0;
+    font-weight: bold;
     border-style: none;
     background: #D0862D;
-    color: #D0862D;
+    color: var(--bg-color);
     font-family: 'Inter';
+}
+
+.input-feedback [type=submit]:hover{
+    cursor: pointer;
+    background: var(--second-color);
+    color: var(--bg-color);
+    transition: 0.2 all linear;
 }
 
 .star-rating{
