--- a/Product/ProductStyle.css
+++ b/Product/ProductStyle.css
@@ -346,16 +346,13 @@ margin-top:67px;
     width: 100%;
     padding: 2%;
     object-fit: cover;
-    margin-bottom: 15px;
 }
 
 .tabcontent h5{
-    text-align: justify;
     font-size: 12px;
     text-align: center;
-    margin-bottom: 5px;
     font-size: 18px;
-    color: var(--main-color);
+    color: var(--second-color);
 }
 
 .tabcontent.expanded {
@@ -364,14 +361,15 @@ margin-top:67px;
 
 .tabcontent p{
     padding: 10px;
-    font-family: inter;
+    font-family: 'inter';
+    text-align: justify;
     max-width: 100%;
     max-height: 100px;
     white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis;
     color: #000000;
-    font-size: 14px;
+    font-size: 12px;
     
     /* word-wrap: normal; */
     /* word-wrap: break-word; */
@@ -399,7 +397,6 @@ margin-top:67px;
 }
 
 .tabcontent button{
-    margin-top: 16px;
     font-family: 'grandstander';
     font-size: 12px;
     color: white;
@@ -414,6 +411,7 @@ margin-top:67px;
     margin: 20px 20px;
     display: block;
     margin-top: 16px;
+    align-items: flex-end;
 }
 
 .text-wrapper {
@@ -432,7 +430,7 @@ margin-top:67px;
 } */
 
 /* Feedback */
-.feedback{
+.feedback{  /* background hijau feedback */
     width: 1100px;
     height: 247px;
     border-radius: 20px;
@@ -444,7 +442,7 @@ margin-top:67px;
     margin-bottom: 100px;
 }
 
-.feedback-header {
+.feedback-header { /*paragraf 'give us feedback...' + image kanan kiri */
     color: #FFF;
     text-align: center;
     font-family: 'Inter';
@@ -455,14 +453,26 @@ margin-top:67px;
     align-items: center;
     justify-content: center;
     display: flex;
-    margin-top: 30px;
+    margin-top: -20px;
 }
 
-.form{
+.feedback-header > p{ /*paragraf 'give us feedback...' */
+    margin-left: 140px;
+    margin-right: 150px;
+    margin-top: -80px;
+}
+
+.feedback img{ /* img cust kanan kiri */
+    width: 130px;
+    height: 160px;
+    margin-top: 20px;
+}
+
+.form{ 
     align-items: center;
     justify-content: center;
     display: flex;
-    margin-top: 37px;
+    margin-top: -70px;
     margin-bottom: 23px;
 }
 
@@ -475,6 +485,7 @@ margin-top:67px;
     align-items: center;
     justify-content: center;
     display: flex;
+    margin-top: -10px;
 }
 
 
