--- a/Home/HomeStyle.css
+++ b/Home/HomeStyle.css
@@ -730,7 +730,8 @@ header {
     color: #FFFFFF;
     font-size: 10px;
     font-family: 'inter';
-    margin-left: 0.5rem; /* Adjust the margin-left as needed */
+    margin-left: 0.5rem;
+    font-weight: normal;
 }
 
 /* Navbar bawah */
@@ -766,16 +767,210 @@ header {
     color: #CCFF00;
 }
 
+/* social media */
+.social {
+    display: flex; /* Membuat elemen-elemen berjajar secara horizontal */
+    align-items: center; /* Pusatkan elemen-elemen secara vertikal */
+    justify-content: flex-end; /* Geser elemen ke tepi kanan */
+    margin-top: -8rem;
+}
+
+.social h5 {
+    margin-right: 5px; 
+    font-family: 'inter';
+    color: #ffffff;
+    font-weight: normal;
+    font-size: 17px;
+}
+
+.social img {
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+}
+
+
+
+
+
 /* Media queries untuk responsif */
 
 @media only screen and (max-width: 768px) {
-    body {
-        font-size: 14px; 
-    }
-
     header {
         height: auto;
     }
+
+    header {
+        position: fixed;
+        width: 100%;
+        height: 59px;
+        top: 0;
+        right: 0;
+        z-index: 1000;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 35px 0.9rem;
+        background-color: #ffffff;
+    }
+
+    .navbar{
+        display: none;
+    }
+
+    #menu-icon {
+        color: var(--second-color);
+        cursor: pointer;
+        display: flex;
+        margin: 0 0 0 29rem;
+        padding: 0;
+        flex-grow: 1;
+        height: 20px;
+    }
+
+    .logo{
+        bottom: 20rem;
+    }
+
+    .grid-container{
+        display: none;
+    }
+
+    /* Best Products */
+
+    .text-best{
+        display: none;
+      }
+
+    .best{
+        width: 100%;
+        min-height: 100vh;
+        background: var(--bg-color);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        grid-template-columns: repeat(auto-fit,minmax(17rem,auto));
+        align-items: center;
+        gap: 1.5rem;
+        display: contents;
+    }
+    
+    .best-text {
+        display: grid;
+        place-items: center;
+        text-align: center;
+        height: 100%;
+    }
+    
+    .best-text h2{
+        color: var(--main-color);
+        text-transform: uppercase;
+        letter-spacing: 2px;
+        font-size: 2rem;
+        margin: 10rem 0 1.4rem;
+    }
+    
+    /* Styles for slideshow */
+    .slideshow {
+        display: flex;
+        overflow: hidden;
+        width: 100%;
+    }
+    
+    .slide {
+        display: none;
+        width: 100%; 
+    }
+    
+    .slide.active {
+        display: flex; 
+        justify-content: center; 
+    }
+    
+    .slide img {
+        max-width: 33.33%; 
+    }
+    
+    .dots {
+        position: relative;
+        bottom: 10px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin: 3rem 0 1.4rem;
+    }
+    
+    .dot {
+        height: 10px;
+        width: 10px;
+        margin: 0 5px;
+        border-radius: 50%;
+        background-color: #888;
+        cursor: pointer;
+    }
+    
+    .active-dot {
+        background-color: var(--button-color);
+    }
+
+/* Home */
+.home{
+    width: 100%;
+    min-height: 28rem;
+}
+
+.home-img{
+    height: 20rem;
+    width: 20rem;
+    position: absolute;
+    top: 10px;
+    margin-top: 25rem;
+    right: 110px;
+    z-index: 0;
+}
+
+.shape{
+    background-color: var(--main-color);
+    width: 15rem;
+    height: auto 20%;
+    margin-left: 70px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 0;
+}
+
+.home-GreenTea{
+    position: absolute;
+    bottom: 15rem;
+    left: -15px;
+    z-index: 0;
+    width: 60px;
+    height: 60px;
+}
+
+.home-text h1{
+    font-size: 3.4rem;
+    color: var(--main-color);
+    text-transform: uppercase;
+}
+
+.home-text span{
+    font-size: 3.4rem;
+    color: var(--button-color);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.home-text p{
+    font-size: 0.938rem;
+    color: black;
+    margin: 1rem 0 1rem;
+    font-family: inter;
+    max-width: calc(18rem - 20px);
+    margin-right: 10px; 
+    text-align: justify;
+}
 }
 
 @media only screen and (max-width: 650px) {
